# RL_project

./: README.md  app.py  pyproject.toml  simulator.py
Archives/: RL_test_soufiane copie 2.ipynb  RL_test_soufiane copie 3.ipynb  RL_test_soufiane copie 4.ipynb  RL_test_soufiane copie 5.ipynb  RL_test_soufiane copie.ipynb  app_data_simu.py
rl-project/: app.py  app_func.py  dataGenerator.py  graphsArmsEvolution.py  linucb.py
scripts/: app.sh
