[tool.poetry]
name = "rl-project"
version = "0.1.0"
description = ""
authors = ["Boustique <soufiane.boustique00@gmail.com>"]
readme = "README.md"
packages = [{include = "rl_project"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
kmodes = "0.12.2"
matplotlib = "3.7.1"
numpy = "1.24.3"
pandas = "2.0.1"
scipy = "1.10.1"
streamlit = "1.22.0"
watchdog = "^3.0.0"
mlflow = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
